renaming doc dir
